--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "description": "nodejs的后端模板,使用了koa,typescript,koa-swagger-decorator,zod等",
   "dependencies": {
     "@types/koa-static": "^4.0.4",
+    "cheerio": "^1.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
@@ -50,6 +51,7 @@
     "@types/koa__router": "^12.0.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/lodash": "^4.17.14",
+    "@types/node-telegram-bot-api": "^0.64.9",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "koa-swagger-decorator": "^2.2.1",
     "nodemon": "^3.1.9",
